[GENERATED] Install ActionText into Dummy app
This commit was generated by changing directories into `test/dummy`,
running the Rails-provided ActionText installation command, and then
migrating our Dummy test application's database:

```bash
cd test/dummy
bundle exec rails action_text:install
cd ../../
bin/rails db:migrate
```

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "@rails/webpacker": "5.0.1"
+    "@rails/actiontext": "^6.0.2-2",
+    "@rails/webpacker": "5.0.1",
+    "trix": "^1.0.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
