Configure Dummy app to serve ActionText assets
Without adding the [`sassc-rails` gem][sassc-rails] as a dependency,
attempts include the `trix.js`-provided stylesheets into the Asset
Pipeline [result in an error][sassc-rails-error].

Additionally, this commit extends the `.github/workflows/tests.yml` to
[include NodeJS support][setup-node], and to install the Dummy
application's Yarn dependencies during the setup phase (through the
[`yarn:install` Rails task][yarn:install], compile the test assets with
the [`app:webpacker:compile` task][webpacker:compile], and to [cache the
installed Yarn packages][cache].

One oddity worth mentioning is that the `rails app:webpacker:compile`
won't execute unless the `bin/webpack` file exists. The file doesn't
need any contents, but there must be a presence check guard clause. The
corresponding `test/dummy/bin/webpack` _does_ exist, and properly
configures and executes the [Webpack CLI commands][webpack-cli].

The `action_text` and `active_storage` provided migrations were
generated with `[5.2]` and `[6.0]` version modifiers. Since this project
will be tested against applications as old as `5.2`, this commit changes
the `ActionText` migration's version modifier to `5.2`. Other Rails
version checks will intervene when `ActionText` is unavailable in the
current test environment.

Finally, declare `test/dummy/config/initializers/assets.rb` to [configure
the Asset Pipeline's search path][asset-initializer] to include the
_project root's_ `node_modules/` directory.

[sassc-rails]: https://github.com/sass/sassc-rails
[sassc-rails-error]: https://github.com/sass/sassc-rails/issues/114
[setup-node]: https://github.com/actions/setup-node/tree/v1#usage
[yarn:install]: https://github.com/rails/webpacker/blob/v5.0.1/lib/tasks/webpacker/yarn_install.rake
[webpacker:compile]: https://github.com/rails/webpacker/tree/v5.0.1#deployment
[webpack-cli]: https://webpack.js.org/api/cli/
[cache]: https://github.com/actions/cache/blob/v1/examples.md#node--

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,15 +24,27 @@ jobs:
       with:
         ruby-version: "${{ matrix.ruby }}"
 
+    - name: "Install NodeJS 12.x"
+      uses: "actions/setup-node@v1"
+      with:
+        node-version: "12.x"
+
     - name: "Generate lockfile"
       run: |
         bundle config path vendor/bundle
         bundle lock
 
-    - uses: "actions/cache@v1"
+    - name: "Cache installed Ruby dependencies"
+      uses: "actions/cache@v1"
       with:
         path: "vendor/bundle"
         key: bundle-${{ hashFiles('Gemfile.lock') }}
+
+    - name: "Cache installed Yarn dependencies"
+      uses: "actions/cache@v1"
+      with:
+        path: "node_modules"
+        key: yarn-${{ hashFiles('yarn.lock') }}
 
     - name: "Install Dependencies"
       run: |
@@ -40,6 +52,7 @@ jobs:
         sudo apt-get -yqq install libsqlite3-dev chromium-browser
 
         bundle install --jobs 4 --retry 3
+        bin/rails app:yarn:install
 
         bin/rails app:webdrivers:chromedriver:update
 
@@ -53,4 +66,5 @@ jobs:
 
     - name: "Run System Tests"
       run: |
+        bin/rails app:webpacker:compile
         bin/rails app:test:system
