Add support for ActionText `rich_text_area`
When [`ActionText`][actiontext] is available, `with_form` provides a
`#fill_in_rich_text_area` helper method.

The current implementation is inspired by
`ActionText::SystemTestHelper#fill_in_rich_text_area` that is currently declared
on  the current [`rails@master` branch][fill_in_rich_text_area].

There is a current limitation in how the [`rails@master`-inspired
`#fill_in_rich_text_area` implementation][fill_in_rich_text_area] resolves the
`locator` argument. Since the underlying `<trix-editor>` element is not a
default field provided by the browser, focussing on its corresponding `<label>`
element won't focus the `<trix-editor>`. To resolve that shortcoming, the
`#fill_in_rich_text_area` uses the `<trix-editor aria-label="...">` attribute as
the label text.

This is a helpful, but incomplete solution to the problem. This requires that
instead of declaring a `<label for="my_rich_text_field">` element
referencing the `<trix-editor id="my_rich_text_field">` element, the `<label>`
element's text (or rather, the text that _would be_ in the `<label>` element)
must be passed to the `<trix-editor aria-label="...">` attribute.

For example:

```html+erb
<%= form_with(model: Post.new) do |form %>
  <%= form.label :my_rich_text_field %>
  <%= form.rich_text_area :my_rich_text_field, "aria-label": translate(:my_rich_text_field, scope: "helpers.label.post") %>
<% end %>
```

Testing
---

To assert that a `rich_text_area` has been filled in, the
`#fill_in_rich_text_area` tests make calls to the
`#assert_rich_text_area` helper method, which delegates to Capybara's
`assert_field` with arguments to match `<input type="hidden">` elements
referenced by the page's `<trix-editor input="...">` attribute.

[actiontext]: https://edgeguides.rubyonrails.org/action_text_overview.html#examples
[fill_in_rich_text_area]: https://github.com/rails/rails/blob/339be65d669c83fd4c64541a9e82086dc5e64682/actiontext/lib/action_text/system_test_helper.rb
[asse

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,13 +52,13 @@ jobs:
         sudo apt-get -yqq install libsqlite3-dev chromium-browser
 
         bundle install --jobs 4 --retry 3
-        bin/rails app:yarn:install
 
+        bin/rails app:webpacker:yarn_install
         bin/rails app:webdrivers:chromedriver:update
 
     - name: "Prepare for Tests"
       run: |
-        bin/rails db:create db:migrate db:test:prepare
+        bin/rails app:db:{create,migrate,test:prepare}
 
     - name: "Run Engine Tests"
       run: |
